# cuda_study

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/analysis/: comparison.cuh  profiling_cmd.cuh  roofline.cuh
include/core/: benchmark.cuh  device_info.cuh  timer.cuh
include/kernels/: kernel_registry.cuh
include/utils/: csv_export.cuh  matrix.cuh  verification.cuh
kernels/example/: 10_kernel_warptiling.cuh  11_kernel_double_buffering.cuh  12_kernel_double_buffering.cuh  1_naive.cuh  2_kernel_global_mem_coalesce.cuh  3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  5_kernel_2D_blocktiling.cuh  6_kernel_vectorize.cuh  7_kernel_resolve_bank_conflicts.cuh  8_kernel_bank_extra_col.cuh  9_kernel_autotuned.cuh  naive.cuh  shared_mem.cuh  tiled_1d.cuh  tiled_2d.cuh
kernels/sgemm/: coalesced.cuh  cublas_wrapper.cuh  naive.cuh  shared_mem.cuh  tiled_1d.cuh  tiled_2d.cuh  vectorized.cuh
src/: main.cu
src/analysis/: comparison.cu  profiling_cmd.cu  roofline.cu
src/core/: benchmark.cu  device_info.cu  timer.cu
src/kernels/: kernel_registry.cu
src/utils/: csv_export.cu  matrix.cu  verification.cu
